web-scrapper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: web-scrapper
  name: web-scrapper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-scrapper
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/web-scrapper-network: "true"
        io.kompose.service: web-scrapper
    spec:
      containers:
        - env:
            - name: GO111MODULE
              value: "on"
            - name: GOBIN
              value: /go/bin/docker
            - name: GOPATH
              value: /go
            - name: SSH_AUTH_SOCK
              value: /ssh-agent
          image: golang:latest
          name: web-scrapper
          ports:
            - containerPort: 8001
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /go/src/web-scrapper
              name: web-scrapper-claim0
          workingDir: /go/src/web-scrapper
      restartPolicy: Always
      volumes:
        - name: web-scrapper-claim0
          persistentVolumeClaim:
            claimName: web-scrapper-claim0
status: {}
